deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 5ud03r5app
  template:
    metadata:
      labels:
        app: 5ud03r5app
    spec:
      containers:
      - name: app
        image: freddych/5ud03r5app:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
